assets-nsg/css/dark.css
body{
  color: #fff;
}
.header-top {
  background-color: #000;
}
.header-top-left .content .title {
  color: yellow;
}
.header-top-right .content ul li a {
  color: yellow;
  border-right: 1px solid rgba(255, 255, 255, 0.5);
}
.header-top-right .content ul li .select-wrap img {
  filter: invert(1);
}
.header-top-right .content ul li .select-wrap .form-select {
  color: #000;
  filter: invert(1);
  font-weight: 600;
}
.header-top-right .content ul li .select-wrap .form-select option {
  color: #000;
}


.site-header .navbar {
  background-color: #000;
  border: 1px solid rgba(255, 255, 255, 0.5);
  border-right: 0;
  border-left: 0;
}
.site-header .navbar .nav-link {
  color: yellow;
}
.site-header .navbar .nav-link:hover, .link-yellow, .award-wrap .nav-tabs .nav-link, .site-header .navbar .nav-item .dropdown-item, .breadcrumb-item a, a, .qm-active a.nav-link, a p {
  color: #ffff00 !important;
}
.site-header .navbar .nav-item .dropdown-toggle::after {
  filter: invert(1);
}

.heading-red, .list-wrap .date, .veer-accordion .veer-info ul li .title{color: #fff !important;}
.btn-red{
  background: #000;
  border: 1px solid #fec941 !important;
  color:#ffff00 !important;
}

.achievement-wrap, .hero-wrap, .achievement-wrap .card-white, .gallery-slider, .gallery-wrap .card-red, .site-footer-bottom , .site-footer-top, .common-card, .qm-active a.nav-link, .wrapper .link-wrap, .organization-chart .tree-node{
  background: #000000;
}
.achievement-wrap .nsg-vision {
  background-color: #3d3f3e;
}

.gallery-wrap .card-black, .award-wrap, .achievement-wrap .card-white, .eliminator-video, .qm-active, .header-top-right .content ul li .text-increment-btn.active, .contact-info .img-wrap{
  background: #000000 !important;
  border: 1px solid #fec941;
}

.news-wrap{
  border: 1px solid #c9c0c0;
}

.eliminator-wrap, .common-bg-right {
  background-color: #000;
}
.search-btn-d .btn, p, .hero-wrap .title, .breadcrumb-item+.breadcrumb-item::before, .breadcrumb-item{color: #fff !important;}

.client-slider-content {
  padding: 40px 10px;
  background: #fff;
 
}

.veer-accordion .accordion-header{background-color: #fff;}

.award-wrap .nav-tabs .nav-link.active {
  background:#343434;
  color: #ffff00;
}
.site-header .navbar .nav-item .dropdown-menu, .veer-accordion .accordion-item, .photogallery-wrap .photogallery-slider .img-title{
  background: #000;
  border: 1px solid #fff;
  color: #fff;
}

.news-title{border-right: 1px solid #fafafa;  background: #000;}

.site-header .navbar .nav-item .dropdown-menu, .organization-wrap .common-card{border: 1px solid #a58636;}
.dropdown-item:focus, .dropdown-item:hover, .site-header .navbar .nav-item .dropdown-item:active,.btn-yellow-outline:hover, .wrapper .link-wrap ul li a:hover, .site-header .navbar .btn-red:hover, .header-top-right .content ul li .text-increment-btn:hover, .header-top-right .content ul li .text-increment-btn.active, .photogallery-wrap .photogallery-slider .owl-nav button:hover {
  background-color: #424141;
}

table tr td, table tr th, .header-top-left .content .title,.heading-black, .form-card-bdr .form-label, i.fa.fa-file-pdf-o.text-danger, .veer-accordion .accordion-body .brief-wrap .title, div.dt-container .dt-paging .dt-paging-button.disabled, div.dt-container .dt-paging .dt-paging-button.disabled:active, div.dt-container .dt-paging .dt-paging-button.disabled:hover{
  color: #fff !important;
}
table tr td, table tr th{
  background: #262626 !important;
}
table tr td a, table tr th a, .qm-active i, .qm-active a, .photogallery-wrap .photogallery-tabs .nav-tabs .nav-item .nav-link, .photogallery-wrap .photogallery-tabs .nav-tabs .nav-item .nav-link{
  color: #ffff00 !important;
}
.veer-accordion .accordion-body .brief-wrap .title + img {
  display: none !important;
}

.photogallery-slider h2 img {
  display: none;
}

select option {
  background: #000;
  color: #ffff00 !important;  
}
.form-card-bdr .form-label .char-red {
  color: #ffff00;
}

.qm-active{
  padding-left: 0px !important;
}

g#Icon_feather-arrow-right path#Path_108123, g#Icon_feather-arrow-right path#Path_108124, svg path {
  fill: #fff !important;
  stroke: #fff !important;
}

/*# sourceMappingURL=dark.css.map */

